fix layout on mobile device for sliding content

--- a/blackwoodops-website/src/app/idea-pros/idea-pros.component.scss
+++ b/blackwoodops-website/src/app/idea-pros/idea-pros.component.scss
@@ -66,7 +66,6 @@
         flex-basis: 45%;
         padding-bottom: 0;
         transition: height 0.25s ease-in-out;
-        max-height: 100vh;
         display: grid;
         grid-template-rows: 3rem 1fr 4rem 10rem;
 
@@ -247,6 +246,11 @@
         flex-direction: column;
         margin: 0 0.5rem;
     }
+
+    .promo {
+        margin: 5rem 1rem;
+    }
+
 
     .contact {
         margin-left: 0.5rem;
